Magnet parsing